--- a/MyDIP/Entity/Entity.csproj
+++ b/MyDIP/Entity/Entity.csproj
@@ -54,6 +54,8 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="DIP_Gray.cs" />
+    <Compile Include="DIP_HE.cs" />
+    <Compile Include="DIP_SF.cs" />
     <Compile Include="DIP_Milv.cs" />
     <Compile Include="EntityBase.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
