添加图像锐化处理，但是使用拉普拉斯算子锐化图像使图像变暗可以考虑结合幂律算法

--- a/MyDIP/Entity/Entity.csproj
+++ b/MyDIP/Entity/Entity.csproj
@@ -55,7 +55,8 @@
     </EmbeddedResource>
     <Compile Include="DIP_Gray.cs" />
     <Compile Include="DIP_HE.cs" />
-    <Compile Include="DIP_SF.cs" />
+    <Compile Include="DIP_ShapeFilter.cs" />
+    <Compile Include="DIP_SoftFilter.cs" />
     <Compile Include="DIP_Milv.cs" />
     <Compile Include="EntityBase.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
