--- a/MyDIP/Entity/Entity.csproj
+++ b/MyDIP/Entity/Entity.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DIP_Gray.cs" />
     <Compile Include="DIP_HE.cs" />
     <Compile Include="DIP_ShapeFilter.cs" />
+    <Compile Include="DIP_Math.cs" />
     <Compile Include="DIP_SoftFilter.cs" />
     <Compile Include="DIP_Milv.cs" />
     <Compile Include="EntityBase.cs" />
